microfrontend1/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mf1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mf1
  template:
    metadata:
      labels:
        app: mf1
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
        - name: mf1
          image: furkanrgb/mf1:latest
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 80
              name: redis
          imagePullPolicy: Always
