microfrontend1/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mf1
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: mf1
